--- a/edit.css
+++ b/edit.css
@@ -44,3 +44,5 @@
 }
 
 /* removed select because I dont need it and its too much effort to move properly */
+
+/* should remove empty space to the left & bottom */
