--- a/edit.css
+++ b/edit.css
@@ -46,3 +46,9 @@
 /* removed select because I dont need it and its too much effort to move properly */
 
 /* should remove empty space to the left & bottom */
+
+.ds4 .abxy {
+    position: absolute;
+    top: 159px;
+    left: 60%;
+}
