--- a/edit.css
+++ b/edit.css
@@ -2,6 +2,8 @@
 
 .controller.ds4 {
     background: url();
+    height: 0px;
+    width: 0px;
 }
 
 .ds4 .touchpad.pressed {
@@ -49,6 +51,6 @@
 
 .ds4 .abxy {
     position: absolute;
-    bottom: 28px;
-    left: 60%;
+    top: 159px;
+    left: 567px;
 }
