--- a/edit.css
+++ b/edit.css
@@ -2,6 +2,8 @@
 
 .controller.ds4 {
     background: url();
+    height: 0px;
+    width: 0px;
 }
 
 .ds4 .touchpad.pressed {
@@ -56,5 +58,5 @@
 .ds4 .abxy {
     position: relative;
     bottom: 28px;
-    left: 500px;
+    left: 450px;
 }
