--- a/edit.css
+++ b/edit.css
@@ -27,6 +27,7 @@
 /* start, select, bumpers and triggers in the off state are in the body image (.controller.ds4) */
 
 .ds4 .dpad {
+    position: relative;
     bottom: 28px;
     left: 28px;
 }
@@ -36,15 +37,15 @@
 .ds4 .triggers {
     width: 400px;
     height: 90px;
-    position: absolute;
-    left: 5%;
+    position: relative;
+    left: 28px;
 }
 
 .ds4 .bumpers {
-    position: absolute;
+    position: relative;
     width: 400px;
     height: 23px;
-    left: 5%;
+    left: 28px;
     top: 94px;
 }
 
@@ -58,5 +59,5 @@
 .ds4 .abxy {
     position: relative;
     bottom: 28px;
-    left: 450px;
+    left: 300px;
 }
