--- a/edit.css
+++ b/edit.css
@@ -1,7 +1,9 @@
 /* Im trying to remove the body & the joysticks making a simplistic skin */
 
 .controller.ds4 {
-    background: url();
+    
+    height: 299;
+    width: 403;
 }
 
 .ds4 .touchpad.pressed {
