--- a/edit.css
+++ b/edit.css
@@ -1,7 +1,7 @@
 /* Im trying to remove the body & the joysticks making a simplistic skin */
 
 .controller.ds4 {
-    background: url();
+    background: url(https://imgur.com/a/m78MSrQ);
 }
 
 .ds4 .touchpad.pressed {
