--- a/edit.css
+++ b/edit.css
@@ -2,6 +2,8 @@
 
 .controller.ds4 {
     background: url(https://luukie13.github.io/fix.png);
+    height: 350px;
+    width: 550px;
 }
 
 .ds4 .touchpad.pressed {
