--- a/edit.css
+++ b/edit.css
@@ -1,7 +1,7 @@
 /* Im trying to remove the body & the joysticks making a simplistic skin */
 
 .controller.ds4 {
-    background: url(https://luukie13.github.io/fix.png);
+    background: url(https://luukie13.github.io/clear.png);
     height: 175px;
     width: 390px;
 }
