--- a/edit.css
+++ b/edit.css
@@ -2,6 +2,8 @@
 
 .controller.ds4 {
     background: url(https://Luukie13.github.io/fix.png);
+    height: 530px;
+    width: 790px;
 }
 
 .ds4 .touchpad.pressed {
