--- a/edit.css
+++ b/edit.css
@@ -1,10 +1,13 @@
 /* Im trying to remove the body & the joysticks making a simplistic skin */
 
 .controller.ds4 {
-    background: url(https://Luukie13.github.io/fix.png);
+    background: url(fix.png);
     height: 530px;
     width: 790px;
+    left: 25px;
 }
+
+
 .ds4 .touchpad.pressed {
     background: url() no-repeat center;
     height: 0px;
