--- a/edit2.css
+++ b/edit2.css
@@ -1,7 +1,7 @@
 /* Im trying to remove the body & the joysticks making a simplistic skin */
 
 .controller.ds4 {
-    background: url(https://Luukie13.github.io/fix.png);
+    background: url(profesh.png);
     background-repeat: no-repeat;
     height: 354px;
     width: 376px;
