--- a/ds4.css
+++ b/ds4.css
@@ -1,5 +1,6 @@
 /*BEGIN PS4 Controller Styling*/
 .controller.ds4 {
+    background: url();
     height: 598px;
     width: 806px;
     /*    margin-left: -403px;
@@ -68,6 +69,29 @@
     transform: rotateY(180deg);
 }
 
+.ds4 .touchpad {
+    width: 262px;
+    height: 151px;
+    position: absolute;
+    left: 272px;
+    top: 122px;
+}
+
+.ds4 .touchpad.pressed {
+    background: url() no-repeat center;
+}
+
+.ds4 .meta {
+    width: 42px;
+    height: 42px;
+    position: absolute;
+    left: 382px;
+    bottom: 216px;
+}
+
+.ds4 .meta.pressed {
+    background: url() no-repeat center;
+}
 
 /*Not needed, but I like keeping them here for posterity*/
 /*.ds4 .quadrant{
